# GTest_GMock_Template

./: CMakeLists.txt  README.md
lib-d/: CMakeLists.txt
lib-d/include/: your_code_dynamic.h  your_code_dynamic_parent.h
lib-d/src/: your_code_dynamic.c  your_code_dynamic_parent.c
lib-s/: CMakeLists.txt
lib-s/include/: your_code_static.h  your_code_static_parent.h
lib-s/src/: your_code_static.c  your_code_static_parent.c
main/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_main.cpp  your_code_fff.cpp  your_code_fff.hpp  your_code_test.cpp  your_code_test_parent.cpp
